# P1-Resolver

./: CMakeLists.txt  README.md
data/: abilities.json  statuses.json
include/resolver/: Db.h  DbLoader.h  Format.h  Resolver.h  Trace.h  Types.h  World.h
src/: Db.cpp  DbLoader.cpp  Resolver.cpp  Trace.cpp  World.cpp  main.cpp
tests/: ResolverTests.cpp
